02 - Skoro hotovo/Nefunkcni Pug

--- a/public/index.html
+++ b/public/index.html
@@ -9,27 +9,27 @@
 <body>
     <div class="container">
         <div class="title">Registrace</div>
-        <form action="#">
+        <form action="/save" method="post">
             <div class="user-details">
                 <div class="input-box">
                     <span class="details">Celé Jméno</span>
-                    <input type="text" placeholder="Zadejte své jméno" required>
+                    <input type="text" placeholder="Zadejte své jméno" name="player" id="player" required>
                 </div>
                 <div class="input-box">
                     <span class="details">Uživatelské jméno</span>
-                    <input type="text" placeholder="Zadejte uiživatelské jméno" required>
+                    <input type="text" placeholder="Zadejte uiživatelské jméno" name="points" id="points" required>
                 </div>
                 <div class="input-box">
                     <span class="details">Email</span>
-                    <input type="text" placeholder="Zadejte emailovou adresu" required>
+                    <input type="text" placeholder="Zadejte emailovou adresu" name="" id="" required>
                 </div>
                 <div class="input-box">
                     <span class="details">Telefonní číslo</span>
-                    <input type="text" placeholder="Zadejte své tel. číslo" required>
+                    <input type="text" placeholder="Zadejte své tel. číslo" name="" id="" required>
                 </div>
                 <div class="input-box">
                     <span class="details">Heslo</span>
-                    <input type="text" placeholder="Zadejte své heslo" required>
+                    <input type="text" placeholder="Zadejte své heslo" name="" id="" required>
                 </div>
                 <div class="input-box">
                     <span class="details">Potvrďte heslo</span>
