--- a/public/index.html
+++ b/public/index.html
@@ -13,11 +13,11 @@
             <div class="user-details">
                 <div class="input-box">
                     <span class="details">Celé Jméno</span>
-                    <input type="text" placeholder="Zadejte své jméno" name="player" id="player" required>
+                    <input type="text" placeholder="Zadejte své jméno" name="username" id="username" required>
                 </div>
                 <div class="input-box">
                     <span class="details">Uživatelské jméno</span>
-                    <input type="text" placeholder="Zadejte uiživatelské jméno" name="points" id="points" required>
+                    <input type="text" placeholder="Zadejte uiživatelské jméno" name="" id="" required>
                 </div>
                 <div class="input-box">
                     <span class="details">Email</span>
@@ -29,7 +29,7 @@
                 </div>
                 <div class="input-box">
                     <span class="details">Heslo</span>
-                    <input type="text" placeholder="Zadejte své heslo" name="" id="" required>
+                    <input type="text" placeholder="Zadejte své heslo" name="password" id="password" required>
                 </div>
                 <div class="input-box">
                     <span class="details">Potvrďte heslo</span>
